<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.tasks.TaskMenuActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-9dp">

    <Button
        android:id="@+id/task_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_one"
        app:layout_constraintBottom_toTopOf="@+id/task_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />

    <Button
        android:id="@+id/task_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <Button
        android:id="@+id/task_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_three"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_two"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/task_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_four"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_three"
        app:layout_constraintVertical_bias="0.099" />

    <Button
        android:id="@+id/task_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_five"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_three"
        app:layout_constraintVertical_bias="0.343" />
</androidx.constraintlayout.widget.ConstraintLayout>